--- a/frontend/app/index.css
+++ b/frontend/app/index.css
@@ -6,7 +6,16 @@
 
 @layer base {
   p {
-    @apply my-2 font-serif;
+    @apply my-2 font-serif font-body;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply leading-h;
   }
 }
 
